Add API paths and update routing; rename handler classes and improve CORS configuration